refactoring stats
